@@ -1130,8 +1130,9 @@
         "silo-limit": "You don't have enough silo space to buy this!",
         "not-enough-stars": "You don't have enough stars to buy this!",
         "item-locked": "You can't buy this item because you haven't unlocked it yet.",
-        "success": "All done, {{author}}. This item was purchased by you",
+        "success": "All done, {{author}}. You bought:{{description}}",
         "no-announcements": "There are currently no announcements in the neighborhood fair",
+        "no-announcements-user": "This user has no items announced in the fair.",
         "fair": "Neighborhood Fair",
         "description": "\n- {{amount}} Kg {{emoji}} **{{plant}}** for {{price}} :star:",
         "user-info": "{{user}} ({{index}})",
