@@ -1135,8 +1135,9 @@
         "silo-limit": "Tu não tem espaço suficiente no silo para comprar isso!",
         "not-enough-stars": "Tu não tem estrelinhas o suficiente para comprar isso!",
         "item-locked": "Tu não pode comprar esse item porque tu ainda não desbloqueou ele.",
-        "success": "Tudo feito, {{author}}. Esse item foi comprado por ti",
+        "success": "Tudo feito, {{author}}. Você comprou:{{description}}",
         "no-announcements": "Não há anúncios na feira da vizinhança atualmente",
+        "no-announcements-user": "Este vizinho não está anunciando nenhum produto atualmente",
         "fair": "Feirinha da Vizinhança",
         "description": "\n- {{amount}} Kg {{emoji}} **{{plant}}** por {{price}} :star:",
         "user-info": "{{user}} ({{index}})",
